# anti-umbrella-dynamic-loiter

./: .gitignore  mav.parm  mav.tlog  mav.tlog.raw  sitl_instructions.md
Documents/: schematic.kicad_pro  schematic.kicad_sch
Documents/Drone Cad/: 3_blade_prop.SLDPRT  BATTERY.step  Carbon Fibre rod.step  Foam Board.step  Motormount.step  Rod clamp.step  board mount.step  tail.step
src/dronecommands/: package.xml  setup.cfg  setup.py
src/dronecommands/dronecommands/: drone_commands.py  keyboard_listener.py
src/dronepid/: CMakeLists.txt  package.xml
src/dronepid/config/: config.yaml
src/dronepid/include/: dronepid_node.hpp
src/dronepid/launch/: dronepid.launch.py
src/dronepid/src/: dronepid.cpp  dronepid_node.cpp
src/launcher/: CMakeLists.txt  package.xml
src/launcher/launch/: launch.py
