<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launcher</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yubo0809@outlook.com">yubo</maintainer>
  <license>TODO: License declaration</license>

  <depend>dronepid</depend>
  <depend>dronecommands</depend>
  <depend>mavros</depend>
  <depend>apriltag_ros</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
